--- a/LawyerbackEnd/LawyerbackEnd/Areas/Admin/Views/About/Details.cshtml
+++ b/LawyerbackEnd/LawyerbackEnd/Areas/Admin/Views/About/Details.cshtml
@@ -25,16 +25,16 @@
 
                 <tr>
                     <th scope="row">@Model.Id</th>
-                    <td>@Model.Textone</td>
-                    <td>@Model.TextTwo</td>
+                    <td>@Html.Raw(Model.Textone)</td>
+                    <td>@Html.Raw(Model.TextTwo)</td>
                     <td>@Model.numberOne</td>
                     <td>@Model.numberTwo</td>
                     <td>@Model.numberThree</td>
                     <td>@Model.numberFour</td>
-                    <td>@Model.numbroneDesc</td>
-                    <td>@Model.numbrTWoDesc</td>
-                    <td>@Model.numbrThreeDesc</td>
-                    <td>@Model.numbFourDesc</td>
+                    <td>@Html.Raw(Model.numbroneDesc)</td>
+                    <td>@Html.Raw(Model.numbrTWoDesc)</td>
+                    <td>@Html.Raw(Model.numbrThreeDesc)</td>
+                    <td>@Html.Raw(Model.numbFourDesc)</td>
 
                     
                 </tr>
