--- a/LawyerbackEnd/LawyerbackEnd/Areas/Admin/Views/AttorneysSlider/Details.cshtml
+++ b/LawyerbackEnd/LawyerbackEnd/Areas/Admin/Views/AttorneysSlider/Details.cshtml
@@ -4,11 +4,10 @@
 
 
 <table class="table table-bordered">
-    <thead>
+    <thead class="bg-register-image">
         <tr>
             <th scope="col">ID</th>
             <th scope="col">Name</th>
-            <th>Edit/Delete</th>
         </tr>
     </thead>
 
