--- a/LawyerbackEnd/LawyerbackEnd/Areas/Admin/Views/AttorneysSlider/Index.cshtml
+++ b/LawyerbackEnd/LawyerbackEnd/Areas/Admin/Views/AttorneysSlider/Index.cshtml
@@ -10,7 +10,7 @@
 
 
 <table class="table table-bordered">
-    <thead>
+    <thead class="bg-info">
         <tr>
             <th scope="col">ID</th>
             <th scope="col">Name</th>
