--- a/LawyerbackEnd/LawyerbackEnd/Areas/Admin/Views/Shared/AdminLayout.cshtml
+++ b/LawyerbackEnd/LawyerbackEnd/Areas/Admin/Views/Shared/AdminLayout.cshtml
@@ -439,6 +439,11 @@
     <script src="~/admin/js/demo/chart-area-demo.js"></script>
     <script src="~/admin/js/demo/chart-pie-demo.js"></script>
     @RenderSection("scripts", false)
+    @RenderSection("scripts1", false)
+    @RenderSection("scriptsNumOne", false)
+    @RenderSection("scriptsNumTwo", false)
+    @RenderSection("scriptsNumThree", false)
+    @RenderSection("scriptsNumFour", false)
 </body>
 
 </html>
