--- a/LawyerbackEnd/LawyerbackEnd/Views/Shared/_Layout.cshtml
+++ b/LawyerbackEnd/LawyerbackEnd/Views/Shared/_Layout.cshtml
@@ -35,51 +35,16 @@
                         <a asp-action="Index" asp-controller="Home">Home</a>
                         
                     </li>
-                    <li class="menu-item menu-item-has-children">
-                        <a href="#">Pages</a>
-                        <ul class="sub-menu">
-                            <li class="menu-item"><a href="about-me.html">About Me</a></li>
-                            <li class="menu-item"><a href="about-us.html">About Us</a></li>
-                            <li class="menu-item"><a href="about-us-2.html">About Us 2</a></li>
-                            <li class="menu-item"><a href="pricing.html">Pricing</a></li>
-                            <li class="menu-item"><a href="gallery-1.html">Gallery</a></li>
-                            <li class="menu-item"><a href="faq.html">FAQ</a></li>
-                            <li class="menu-item"><a asp-controller="Home" asp-action="Pages">Testimonials</a></li>
-                        </ul>
+                    <li class="">
+                        <a asp-action="Pages" asp-controller="Home">Pages</a>
                     </li>
-                    <li class="menu-item menu-item-has-children">
-                        <a href="practice-areas.html">Practice Areas</a>
-                        <ul class="sub-menu">
-                            <li class="menu-item menu-item-has-children">
-                                <a href="practice-areas.html">Practice v1</a>
-                                <ul class="sub-menu">
-                                    <li class="menu-item"><a href="practice-areas-2-cols.html">Practice v1 2 Cols</a></li>
-                                    <li class="menu-item"><a href="practice-areas-3-cols.html">Practice v1 3 Cols</a></li>
-                                    <li class="menu-item"><a href="practice-areas.html">Practice v1 4 Cols</a></li>
-                                </ul>
-                            </li>
-                            <li class="menu-item menu-item-has-children">
-                                <a asp-controller="Home" asp-action="Practice">Practice v2</a>
-                               
-                            </li>
-                            <li class="menu-item menu-item-has-children">
-                                <a href="practice-image-3-cols.html">Practice Image</a>
-                                <ul class="sub-menu">
-                                    <li class="menu-item"><a href="practice-image-3-cols.html">Practice Image 3 Cols</a></li>
-                                    <li class="menu-item"><a href="practice-image-4-cols.html">Practice Image 4 Cols</a></li>
-                                </ul>
-                            </li>
-                            <li class="menu-item"><a href="practice-single-page.html">Single Practice</a></li>
-                        </ul>
+                    <li class="">
+                        <a asp-action="Practice" asp-controller="Home">Practice Areas</a>
+                        
                     </li>
-                    <li class="menu-item menu-item-has-children">
-                        <a href="attorneys.html">Attorneys</a>
-                        <ul class="sub-menu">
-                            <li class="menu-item"><a href="attorneys-2-cols.html">Attorneys 2 Cols</a></li>
-                            <li class="menu-item"><a href="attorneys.html">Attorneys 3 Cols</a></li>
-                            <li class="menu-item"><a href="attorneys-4-cols.html">Attorneys 4 Cols</a></li>
-                            <li class="menu-item"><a asp-controller="Home" asp-action="Attorneys">Single Attorney</a></li>
-                        </ul>
+                    <li class="">
+                        <a asp-action="Attorneys" asp-controller="Home">Attorneys</a>
+                        
                     </li>
                     <li class="menu-item menu-item-has-children">
                         <a href="case-studies.html">Case Studies</a>
@@ -90,18 +55,11 @@
                             <li class="menu-item"><a href="cases-single-page.html">Single Case</a></li>
                         </ul>
                     </li>
-                    <li class="menu-item menu-item-has-children">
+                    <li class="">
                         <a asp-action="Blog" asp-controller="Home">Blog</a>
-                        <ul class="sub-menu">
-                            <li class="menu-item"><a href="blog-list.html">Blog List</a></li>
-                            <li class="menu-item"><a href="blog-classic.html">Blog Classic</a></li>
-                            <li class="menu-item"><a href="blog.html">Blog Grid 2 Cols</a></li>
-                            <li class="menu-item"><a href="blog-grid-3-cols.html">Blog Grid 3 Cols</a></li>
-                            <li class="menu-item"><a href="blog-full-width.html">Blog Full Width</a></li>
-                            <li class="menu-item"><a href="blog-single-post.html">Blog Single Post</a></li>
-                        </ul>
+                        
                     </li>
-                    <li class="menu-item menu-item-has-children">
+                    <li class="">
                         <a asp-action="Contact" asp-controller="Home">Contact</a>
                         <ul class="sub-menu">
                             <li class="menu-item"><a href="contact.html">Contact 1</a></li>
