--- a/LawyerbackEnd/LawyerbackEnd/Areas/Admin/Views/About/Create.cshtml
+++ b/LawyerbackEnd/LawyerbackEnd/Areas/Admin/Views/About/Create.cshtml
@@ -1,65 +1,131 @@
 ﻿@model IndexChoose
-
-
-@section styles{ @*bunu ona gore yazdiqki burda yazilan css shared papkasinda loayout.cshtml icerisinde render ede bilek*@
-<style>
-    label {
-        color: red;
-    }
-</style>
+@{
+    ViewData["Title"] = "Edit";
 }
 <form method="post" enctype="multipart/form-data">
-    <div class="mb-3">
-        <label>Text One</label>
-        <input type="text" class="form-control" asp-for="Textone">
-        <span asp-validation-for="Textone" style="color:red"></span>
+    <div asp-validation-summary="All" class="text-danger"></div>
+    <div class="form-group">
+        <label>Textone</label>
+        <textarea asp-for="Textone" id="Textone" class="form-control"></textarea>
+        <span asp-validation-for="Textone" class="text-danger"></span>
     </div>
-    <div class="mb-3">
+    <div class="form-group">
         <label>Text Two</label>
-        <input type="text" class="form-control" asp-for="TextTwo">
-        <span asp-validation-for="TextTwo" style="color:red"></span>
+        <textarea asp-for="TextTwo" id="textTo" class="form-control"></textarea>
+        <span asp-validation-for="TextTwo" class="text-danger"></span>
     </div>
-    <div class="mb-3">
+    <div class="form-group">
         <label>Number One</label>
-        <input type="text" class="form-control" asp-for="numberOne">
-        <span asp-validation-for="numberOne" style="color:red"></span>
+        <textarea asp-for="numberOne" id="numberOne" class="form-control"></textarea>
+        <span asp-validation-for="numberOne" class="text-danger"></span>
     </div>
-    <div class="mb-3">
+    <div class="form-group">
         <label>Number Two</label>
-        <input type="text" class="form-control" asp-for="numberTwo">
-        <span asp-validation-for="numberTwo" style="color:red"></span>
+        <textarea asp-for="numberTwo" id="numberOne" class="form-control"></textarea>
+        <span asp-validation-for="numberTwo" class="text-danger"></span>
     </div>
-    <div class="mb-3">
-        <label>Number Three</label>
-        <input type="text" class="form-control" asp-for="numberThree">
-        <span asp-validation-for="numberThree" style="color:red"></span>
-    </div>
-    <div class="mb-3">
-        <label>Number Four</label>
-        <input type="text" class="form-control" asp-for="numberFour">
-        <span asp-validation-for="numberFour" style="color:red"></span>
-    </div>
-    <div class="mb-3">
-        <label>Number One Description</label>
-        <input type="text" class="form-control" asp-for="numbroneDesc">
-        <span asp-validation-for="numbroneDesc" style="color:red"></span>
-    </div>
-    <div class="mb-3">
-        <label>Number Two Description</label>
-        <input type="text" class="form-control" asp-for="numbrTWoDesc">
-        <span asp-validation-for="numbrTWoDesc" style="color:red"></span>
-    </div>
-    <div class="mb-3">
-        <label>Number Three Description</label>
-        <input type="text" class="form-control" asp-for="numbrThreeDesc">
-        <span asp-validation-for="numbrThreeDesc" style="color:red"></span>
-    </div>
-    <div class="mb-3">
-        <label>Number Four Description</label>
-        <input type="text" class="form-control" asp-for="numbFourDesc">
-        <span asp-validation-for="numbFourDesc" style="color:red"></span>
-    </div>
-    
 
-    <button type="submit" class="btn btn-primary">Submit</button>
+    <div class="form-group">
+        <label>Number Three</label>
+        <textarea asp-for="numberThree" id="numberThree" class="form-control"></textarea>
+        <span asp-validation-for="numberThree" class="text-danger"></span>
+    </div>
+
+    <div class="form-group">
+        <label>Number Four</label>
+        <textarea asp-for="numberFour" id="numberFour" class="form-control"></textarea>
+        <span asp-validation-for="numberFour" class="text-danger"></span>
+    </div>
+    <div class="form-group">
+        <label>Number One Description</label>
+        <textarea asp-for="numbroneDesc" id="numbroneDesc" class="form-control"></textarea>
+        <span asp-validation-for="numbroneDesc" class="text-danger"></span>
+    </div>
+
+    <div class="form-group">
+        <label>Number Two Description</label>
+        <textarea asp-for="numbrTWoDesc" id="numbrtwoDesc" class="form-control"></textarea>
+        <span asp-validation-for="numbrTWoDesc" class="text-danger"></span>
+    </div>
+
+    <div class="form-group">
+        <label>Number Three Description</label>
+        <textarea asp-for="numbrThreeDesc" id="numbrThreeDesc" class="form-control"></textarea>
+        <span asp-validation-for="numbrThreeDesc" class="text-danger"></span>
+    </div>
+
+    <div class="form-group">
+        <label>Number Four Description</label>
+        <textarea asp-for="numbFourDesc" id="numbFourDesc" class="form-control"></textarea>
+        <span asp-validation-for="numbFourDesc" class="text-danger"></span>
+    </div>
+    <input type="submit" class="btn btn-danger btn-block" value="Update" />
 </form>
+
+
+@section scripts{
+
+    <partial name="_ValidationScriptsPartial" />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/ckeditor5/32.0.0/ckeditor.min.js"></script>
+    <script>
+        ClassicEditor.create(document.querySelector('#Textone')).catch(error => {
+            console.error(error);
+        });
+    </script>
+}
+
+@section scripts1{
+
+    <partial name="_ValidationScriptsPartial" />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/ckeditor5/32.0.0/ckeditor.min.js"></script>
+    <script>
+        ClassicEditor.create(document.querySelector('#textTo')).catch(error => {
+            console.error(error);
+        });
+    </script>
+}
+
+
+@section scriptsNumOne{
+
+    <partial name="_ValidationScriptsPartial" />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/ckeditor5/32.0.0/ckeditor.min.js"></script>
+    <script>
+        ClassicEditor.create(document.querySelector('#numbroneDesc')).catch(error => {
+            console.error(error);
+        });
+    </script>
+}
+
+@section scriptsNumTwo{
+
+    <partial name="_ValidationScriptsPartial" />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/ckeditor5/32.0.0/ckeditor.min.js"></script>
+    <script>
+        ClassicEditor.create(document.querySelector('#numbrtwoDesc')).catch(error => {
+            console.error(error);
+        });
+    </script>
+}
+
+@section scriptsNumThree{
+
+    <partial name="_ValidationScriptsPartial" />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/ckeditor5/32.0.0/ckeditor.min.js"></script>
+    <script>
+        ClassicEditor.create(document.querySelector('#numbrThreeDesc')).catch(error => {
+            console.error(error);
+        });
+    </script>
+}
+
+@section scriptsNumFour{
+
+    <partial name="_ValidationScriptsPartial" />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/ckeditor5/32.0.0/ckeditor.min.js"></script>
+    <script>
+        ClassicEditor.create(document.querySelector('#numbFourDesc')).catch(error => {
+            console.error(error);
+        });
+    </script>
+}
