--- a/LawyerbackEnd/LawyerbackEnd/Areas/Admin/Views/AttorneysLogo/Index.cshtml
+++ b/LawyerbackEnd/LawyerbackEnd/Areas/Admin/Views/AttorneysLogo/Index.cshtml
@@ -9,11 +9,11 @@
 }
 
 <div>
-    <a href="/Admin/AttorneysLogo/Create" class="btn btn-success" style="width:100%">Add new slider</a>
+    <a href="/Admin/AttorneysLogo/Create" class="btn btn-outline-secondary" style="width:100%;margin-bottom:20px">Add new slider</a>
 </div>
 
 <table class="table table-bordered">
-    <thead>
+    <thead class="bg-gradient-danger">
         <tr>
             <th scope="col">ID</th>
             <th scope="col">Image</th>
@@ -25,7 +25,7 @@
 
         @foreach (var item in Model)
         {
-            <tr>
+            <tr class="table-dark">
                 <th scope="row">@item.Id</th>
                 <td>
                     <img width="200" height="150" src="~/images/Logo/@item.Image" alt="Alternate Text" />
